plugins {
    id 'java'
    id 'maven-publish'
}

group = 'com.mohistmc'
version = '0.7'

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    // 保留编译器警告以便发现潜在问题；如确需静默，可按文件局部抑制而非全局关闭
}

repositories {
    mavenCentral()
    maven { url 'https://maven.mohistmc.com/' }
}

dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.42'
    annotationProcessor 'org.projectlombok:lombok:1.18.42'
}

jar {
    manifest {
        attributes([
                'Specification-Title'   : 'Tools',
                'Specification-Vendor'  : 'MohistMC',
                'Implementation-Title'  : 'Tools',
                'Implementation-Version': version,
                'Implementation-Vendor' : 'MohistMC'
        ] as LinkedHashMap, 'com/mohistmc/tools/')
    }
}

publishing {
    publications {
        maven(MavenPublication) {
            groupId project.group
            artifactId project.name.toLowerCase()
            version project.version
            from components.java
        }
    }

    repositories {
        mavenLocal()

        maven {
            name = "Mohist-Maven"
            setUrl("file:/maven/")
        }
    }
}
